compiler/weave_syntax/tests/data/syntax/statements/loops0001.source
#[unroll]
somewhere: while (x != 0)
{
    while (z != 0)
    {
        if ((x % 4) == 0)
        {
            break;
        }
        else if (x % 3 == 1)
        {
            continue;
        }
        else
        {
            goto somewhere;
        }
    }
}

for (;;)
{
    break;
}

foreach (var item in collection)
{
    break;
}

foreach (;)
{
    break;
}

for (;)
{
    break;
}
